vencloud/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vencloud
spec:
  selector:
    matchLabels:
      app: vencloud
  template:
    metadata:
      labels:
        app: vencloud
    spec:
      containers:
        - name: vencloud
          image: ghcr.io/simulatan/vencloud:v0.0.2-simulatan.1
          ports:
            - containerPort: 8080
