vencloud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vencloud
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: vencloud
