vencloud/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vencloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vencloud.simulatan.me`)
      services:
        - name: vencloud
          port: 80
